# Sebasti-n-Cordero-Quesada

./: README.md
ProductionLineSimulator/: .gitignore  CMakeLists.txt
ProductionLineSimulator/docs/: README.md
ProductionLineSimulator/docs/uml/: diagram.puml
ProductionLineSimulator/scripts/: package.sh  run.sh
ProductionLineSimulator/src/: main.cpp
ProductionLineSimulator/src/core/: Buffer.h  ProductionController.cpp  ProductionController.h  ThreadManager.cpp  ThreadManager.h  WorkStation.cpp  WorkStation.h
ProductionLineSimulator/src/core/stations/: Assembler.cpp  Assembler.h  Intake.cpp  Intake.h  Packaging.cpp  Packaging.h  QualityInspection.cpp  QualityInspection.h  Shipping.cpp  Shipping.h
ProductionLineSimulator/src/logging/: Logger.cpp  Logger.h
ProductionLineSimulator/src/model/: Product.cpp  Product.h
ProductionLineSimulator/src/stats/: StatsAggregator.cpp  StatsAggregator.h
ProductionLineSimulator/src/ui/: MainWindow.h
